# worktree-manager

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  formula_template.rb  mise.toml
src/: git.rs  main.rs  shell.rs  utils.rs
src/commands/: add.rs  init.rs  list.rs  mod.rs  pick.rs  remove.rs
src/version_check/: github.rs  mod.rs
