[package]
name = "worktree-manager"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
regex = "*"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
git2 = "0.20.3"
inquire = "0.7.4"
random_word = { version = "0.5.2", features = ["en"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tokio = { version = "1.35.1", features = ["full"] }
